--- a/projects/skeleton/src/assets/i18n/en.json
+++ b/projects/skeleton/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "main": {
     "home": "Home",
-    "app-name": "Skeleton",
+    "app-name": "Skeleton App",
     "dashboard": "Dashboard",
     "videos": "Videos",
     "admin": "Admin",
