--- a/projects/skeleton/src/assets/i18n/en.json
+++ b/projects/skeleton/src/assets/i18n/en.json
@@ -13,6 +13,7 @@
     "viewchild": "ViewChild",
     "forms": "Forms",
     "observable": "Observable",
-    "table": "Table"
+    "table": "Table",
+		"scrolling": "Scrolling"
   }
 }
