add sub router outlet for demo

--- a/projects/skeleton/src/assets/i18n/en.json
+++ b/projects/skeleton/src/assets/i18n/en.json
@@ -14,6 +14,7 @@
     "forms": "Forms",
     "observable": "Observable",
     "table": "Table",
-		"scrolling": "Scrolling"
+		"scrolling": "Scrolling",
+		"overview": "Overview"
   }
 }
