--- a/projects/skeleton/src/assets/i18n/en.json
+++ b/projects/skeleton/src/assets/i18n/en.json
@@ -15,6 +15,7 @@
     "observable": "Observable",
     "table": "Table",
 		"scrolling": "Scrolling",
-		"overview": "Overview"
+		"overview": "Overview",
+		"ngtemplate": "ng-template"
   }
 }
