dynamic component loader

--- a/projects/skeleton/src/assets/i18n/en.json
+++ b/projects/skeleton/src/assets/i18n/en.json
@@ -16,6 +16,7 @@
     "table": "Table",
 		"scrolling": "Scrolling",
 		"overview": "Overview",
-		"ngtemplate": "ng-template"
+		"ngtemplate": "ng-template",
+		"easyloader": "Easy Loader"
   }
 }
