proove of concept

--- a/projects/skeleton/src/assets/i18n/en.json
+++ b/projects/skeleton/src/assets/i18n/en.json
@@ -17,6 +17,8 @@
 		"scrolling": "Scrolling",
 		"overview": "Overview",
 		"ngtemplate": "ng-template",
-		"easyloader": "Easy Loader"
+		"easyloader": "Easy Loader",
+		"proove-of-concept": "Proove concept",
+		"inject-function": "inject function"
   }
 }
